Updated dependencies and fixed unit test Changed Parquet to use logical types